--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
     <title>Carosello</title>
     <link rel="stylesheet" href="./CSS/style.css">
     <script type="text/javascript" src="./JS/main.js" defer></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
-<div class="container vh-100">
-    <div class="row justify-content-center align-items-center vh-100">
-        <div class="col-8 debug">
+    <div class="container">
+        <div class="carosello">
+
+            <div id="slide-container">
+
+                <img id="image" src="./img/01.webp" alt="">
+
+            </div>
+
+            <div id="controller-container">
+                <div id="up-arrow" class="arrow"><i class="fa-solid fa-arrow-up"></i></div>
+                <div id="down-arrow" class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
+            </div>
 
         </div>
     </div>
-</div>
+
     
 </body>
 </html>
