--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 
             <div id="slide-container">
 
-                <img id="image" src="./img/01.webp" alt="">
+                <div id="image"></div>
 
             </div>
 
             <div id="controller-container">
+
                 <div id="up-arrow" class="arrow"><i class="fa-solid fa-arrow-up"></i></div>
                 <div id="down-arrow" class="arrow"><i class="fa-solid fa-arrow-down"></i></div>
+
             </div>
 
         </div>
