--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 
                 <div id="image"></div>
 
+                <div id="scroll">
+                    <div><img class="selection border thumb" src="./img/05.webp" alt=""></div>
+                    <div><img class="selection border thumb" src="./img/04.webp" alt=""></div>
+                    <div><img class="selection border thumb" src="./img/03.webp" alt=""></div>
+                    <div><img class="selection border thumb" src="./img/02.webp" alt=""></div>
+                    <div><img class="selection border thumb" src="./img/01.webp" alt=""></div>
+                </div>
+
             </div>
 
             <div id="controller-container">
