--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carosello</title>
     <link rel="stylesheet" href="./CSS/style.css">
+    <script type="text/javascript" src="./JS/function.js" defer></script>
     <script type="text/javascript" src="./JS/main.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -18,11 +19,11 @@
                 <div id="image"></div>
 
                 <div id="scroll">
-                    <div><img class="selection border thumb" src="./img/05.webp" alt=""></div>
-                    <div><img class="selection border thumb" src="./img/04.webp" alt=""></div>
-                    <div><img class="selection border thumb" src="./img/03.webp" alt=""></div>
-                    <div><img class="selection border thumb" src="./img/02.webp" alt=""></div>
-                    <div><img class="selection border thumb" src="./img/01.webp" alt=""></div>
+                    <div class="selection thumb"><img src="./img/05.webp" alt=""></div>
+                    <div class="selection thumb"><img src="./img/04.webp" alt=""></div>
+                    <div class="selection thumb"><img src="./img/03.webp" alt=""></div>
+                    <div class="selection thumb"><img src="./img/02.webp" alt=""></div>
+                    <div class="selection thumb"><img src="./img/01.webp" alt=""></div>
                 </div>
 
             </div>
